fixed CSS error with not showing all instances in the approval list pages

--- a/public/css/list.css
+++ b/public/css/list.css
@@ -16,7 +16,7 @@ h1{
 	position: relative;
 	bottom: 108em;
 	border-collapse: collapse;
-	margin: 25px 0;
+	margin: 500px 0;
 	font-size: 0.9em;
 	min-width: 400px;
 	border-radius: 6.5px;
